<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/note_title_edit_text"
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/note_title_hint"
        android:inputType="textShortMessage|textCapSentences"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="25dp"
        android:singleLine="true"
        tools:ignore="MissingPrefix"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorNoteItemSeparator"/>

    <EditText
        android:id="@+id/note_body_edit_text"
        fontPath="fonts/OpenSans-Regular.ttf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/note_body_hint"
        android:inputType="textMultiLine|textCapSentences|textLongMessage"
        android:isScrollContainer="true"
        android:paddingTop="20dp"
        android:scrollbars="vertical"
        tools:ignore="MissingPrefix"/>

</LinearLayout>